<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="active">Active</string>
    <string name="add">Add</string>
    <string name="add_password">Add Password</string>
    <string name="app_name">Password Manager</string>
    <string name="authenticate">Authenticate</string>
    <string name="authentication_failed">Authentication failed</string>
    <string name="authentication_required">Authentication Required</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_master_password">Confirm Master Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="copy">Copy</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="edit_password">Edit Password</string>
    <string name="error">Error!</string>
    <string name="error_different_master_passwords">Master passwords are not the same</string>
    <string name="error_different_passwords">Passwords are not the same</string>
    <string name="error_empty_master_password">Master password can\'t be empty</string>
    <string name="error_empty_name">Name can´t be empty</string>
    <string name="error_password_not_saved">Password can\'t be saved</string>
    <string name="error_status_not_selected">You must selected a status</string>
    <string name="inactive">Inactive</string>
    <string name="information">Information!</string>
    <string name="master_password">Master Password</string>
    <string name="message_confirm_delete_password">Are you sure you want to delete this password?</string>
    <string name="message_password_copied">Password copied to clipboard</string>
    <string name="message_password_saved">Password saved correctly</string>
    <string name="message_username_copied">Username copied to clipboard</string>
    <string name="name_1">Name</string>
    <string name="name_2">Name:</string>
    <string name="no">No</string>
    <string name="notes_1">Notes</string>
    <string name="notes_2">Notes:</string>
    <string name="ok">OK</string>
    <string name="password_1">Password</string>
    <string name="password_2">Password:</string>
    <string name="passwords">Passwords</string>
    <string name="save">Save</string>
    <string name="search">Search</string>
    <string name="show">Show</string>
    <string name="status_1">Status</string>
    <string name="status_2">Status:</string>
    <string name="url_1">URL</string>
    <string name="url_2">URL:</string>
    <string name="username_1">Username</string>
    <string name="username_2">Username:</string>
    <string name="warning">Warning!</string>
    <string name="yes">Yes</string>
</resources>
