<?xml version="1.0" encoding="utf-8"?>
<layout>
    
    <data>
        
        <variable
            name="name"
            type="String" />
        
        <variable
            name="notes"
            type="String" />
        
        <variable
            name="password"
            type="String" />
        
        <variable
            name="status"
            type="String" />
        
        <variable
            name="url"
            type="String" />
        
        <variable
            name="username"
            type="String" />
        
    </data>
    
    <androidx.appcompat.widget.LinearLayoutCompat
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:background="@drawable/bg_dialog"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="horizontal">
        
        <androidx.appcompat.widget.LinearLayoutCompat
            android:gravity="right"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_medium"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_width="wrap_content"
            android:orientation="vertical">
    
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/name_2"
                android:textColor="@color/on_surface" />
    
            <TextView
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_very_small"
                android:layout_width="wrap_content"
                android:text="@string/url_2"
                android:textColor="@color/on_surface" />
    
            <TextView
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_very_small"
                android:layout_width="wrap_content"
                android:text="@string/username_2"
                android:textColor="@color/on_surface" />
    
            <TextView
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_very_small"
                android:layout_width="wrap_content"
                android:text="@string/password_2"
                android:textColor="@color/on_surface" />
    
            <TextView
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_very_small"
                android:layout_width="wrap_content"
                android:text="@string/status_2"
                android:textColor="@color/on_surface" />
    
            <TextView
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_very_small"
                android:layout_width="wrap_content"
                android:text="@string/notes_2"
                android:textColor="@color/on_surface" />
            
        </androidx.appcompat.widget.LinearLayoutCompat>
        
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_medium"
            android:layout_marginLeft="@dimen/margin_very_small"
            android:layout_marginRight="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_width="wrap_content"
            android:orientation="vertical">
            
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@{name}"
                android:textColor="@color/on_surface"
                android:textStyle="bold"
                tools:text="Facebook" />
    
            <TextView
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_very_small"
                android:layout_width="wrap_content"
                android:text="@{url}"
                android:textIsSelectable="true"
                android:textColor="@color/on_surface"
                android:textStyle="bold"
                tools:text="www.facebook.com" />
    
            <TextView
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_very_small"
                android:layout_width="wrap_content"
                android:text="@{username}"
                android:textIsSelectable="true"
                android:textColor="@color/on_surface"
                android:textStyle="bold"
                tools:text="SpaceW0lf" />
    
            <TextView
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_very_small"
                android:layout_width="wrap_content"
                android:text="@{password}"
                android:textColor="@color/on_surface"
                android:textIsSelectable="true"
                android:textStyle="bold"
                tools:text="Im4P@$$w0rd" />
    
            <TextView
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_very_small"
                android:layout_width="wrap_content"
                android:text="@{status}"
                android:textColor="@color/on_surface"
                android:textStyle="bold"
                tools:text="Active" />
    
            <TextView
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_very_small"
                android:layout_width="wrap_content"
                android:text="@{notes}"
                android:textColor="@color/on_surface"
                android:textIsSelectable="true"
                android:textStyle="bold"
                tools:text="Change password every mopnth, please!" />
            
        </androidx.appcompat.widget.LinearLayoutCompat>
    
    </androidx.appcompat.widget.LinearLayoutCompat>
    
</layout>
