<?xml version="1.0" encoding="utf-8"?>
<layout>
    
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/background"
        android:layout_height="match_parent"
        android:layout_width="match_parent">
    
        <androidx.constraintlayout.widget.ConstraintLayout
            android:background="@color/background"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
        
            <com.google.android.material.textfield.TextInputLayout
                android:hint="@string/name_1"
                android:id="@+id/name_text_input_layout"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_width="match_parent"
                app:layout_constraintBottom_toTopOf="@id/url_text_input_layout"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">
            
                <com.google.android.material.textfield.TextInputEditText
                    android:inputType="text"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent" />
        
            </com.google.android.material.textfield.TextInputLayout>
        
            <com.google.android.material.textfield.TextInputLayout
                android:hint="@string/url_1"
                android:id="@+id/url_text_input_layout"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_width="match_parent"
                app:layout_constraintBottom_toTopOf="@id/username_text_input_layout"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/name_text_input_layout">
            
                <com.google.android.material.textfield.TextInputEditText
                    android:inputType="text"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent" />
        
            </com.google.android.material.textfield.TextInputLayout>
        
            <com.google.android.material.textfield.TextInputLayout
                android:hint="@string/username_1"
                android:id="@+id/username_text_input_layout"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_width="match_parent"
                app:layout_constraintBottom_toTopOf="@id/password_text_input_layout"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/url_text_input_layout">
            
                <com.google.android.material.textfield.TextInputEditText
                    android:inputType="text"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent" />
        
            </com.google.android.material.textfield.TextInputLayout>
        
            <com.google.android.material.textfield.TextInputLayout
                android:hint="@string/password_1"
                android:id="@+id/password_text_input_layout"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_width="match_parent"
                app:layout_constraintBottom_toTopOf="@id/confirmed_password_text_input_layout"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/username_text_input_layout"
                app:passwordToggleEnabled="true">
            
                <com.google.android.material.textfield.TextInputEditText
                    android:inputType="textPassword"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent" />
        
            </com.google.android.material.textfield.TextInputLayout>
        
            <com.google.android.material.textfield.TextInputLayout
                android:hint="@string/confirm_password"
                android:id="@+id/confirmed_password_text_input_layout"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_width="match_parent"
                app:layout_constraintBottom_toTopOf="@id/status_text_input_layout"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/password_text_input_layout"
                app:passwordToggleEnabled="true">
            
                <com.google.android.material.textfield.TextInputEditText
                    android:inputType="textPassword"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent" />
        
            </com.google.android.material.textfield.TextInputLayout>
            
            <com.google.android.material.textfield.TextInputLayout
                android:hint="@string/status_1"
                android:id="@+id/status_text_input_layout"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_width="match_parent"
                app:layout_constraintBottom_toTopOf="@id/notes_text_input_layout"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/confirmed_password_text_input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu">
                
                <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                    android:editable="false"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent" />
                
            </com.google.android.material.textfield.TextInputLayout>
            
            <com.google.android.material.textfield.TextInputLayout
                android:hint="@string/notes_1"
                android:id="@+id/notes_text_input_layout"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_width="match_parent"
                app:layout_constraintBottom_toTopOf="@id/save_material_button"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/status_text_input_layout">
                
                <com.google.android.material.textfield.TextInputEditText
                    android:inputType="textMultiLine"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:maxLines="8" />
                
            </com.google.android.material.textfield.TextInputLayout>
            
            <com.google.android.material.button.MaterialButton
                android:id="@+id/save_material_button"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_large"
                android:layout_marginHorizontal="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_width="match_parent"
                android:text="@string/save"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/notes_text_input_layout" />
    
        </androidx.constraintlayout.widget.ConstraintLayout>
        
    </ScrollView>
    
</layout>
