<?xml version="1.0" encoding="utf-8"?>
<layout>
    
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/background"
        android:layout_height="match_parent"
        android:layout_width="match_parent">
        
        <com.google.android.material.textfield.TextInputLayout
            android:hint="@string/master_password"
            android:id="@+id/master_password_text_input_layout"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_large"
            android:layout_width="match_parent"
            app:layout_constraintBottom_toTopOf="@id/confirmed_master_password_text_input_layout"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:passwordToggleEnabled="true">
            
            <com.google.android.material.textfield.TextInputEditText
                android:inputType="textPassword"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" />
            
        </com.google.android.material.textfield.TextInputLayout>
    
        <com.google.android.material.textfield.TextInputLayout
            android:hint="@string/confirm_master_password"
            android:id="@+id/confirmed_master_password_text_input_layout"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_large"
            android:layout_width="match_parent"
            app:layout_constraintBottom_toTopOf="@id/authenticate_material_button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/master_password_text_input_layout"
            app:passwordToggleEnabled="true">
        
            <com.google.android.material.textfield.TextInputEditText
                android:inputType="textPassword"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" />
    
        </com.google.android.material.textfield.TextInputLayout>
        
        <com.google.android.material.button.MaterialButton
            android:id="@+id/authenticate_material_button"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_large"
            android:layout_width="match_parent"
            android:text="@string/authenticate"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/confirmed_master_password_text_input_layout" />
    
    </androidx.constraintlayout.widget.ConstraintLayout>
    
</layout>
