<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <data>
        
        <variable
            name="name"
            type="String" />
        
        <variable
            name="notes"
            type="String" />
        
        <variable
            name="password"
            type="String" />
        
        <variable
            name="status"
            type="String" />
        
        <variable
            name="url"
            type="String" />
        
        <variable
            name="username"
            type="String" />
        
    </data>
    
    <ScrollView
        android:background="@color/background"
        android:layout_height="match_parent"
        android:layout_width="match_parent">
    
        <androidx.constraintlayout.widget.ConstraintLayout
            android:background="@color/background"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
        
            <com.google.android.material.textfield.TextInputLayout
                android:hint="@string/name_1"
                android:id="@+id/name_text_input_layout"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_width="match_parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">
    
                <com.google.android.material.textfield.TextInputEditText
                    android:editable="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{name}"
                    android:textIsSelectable="true" />

            </com.google.android.material.textfield.TextInputLayout>
        
            <com.google.android.material.textfield.TextInputLayout
                android:hint="@string/url_1"
                android:id="@+id/url_text_input_layout"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_width="match_parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/name_text_input_layout">
            
                <com.google.android.material.textfield.TextInputEditText
                    android:editable="false"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:text="@{url}"
                    android:textIsSelectable="true" />
        
            </com.google.android.material.textfield.TextInputLayout>
    
            <ImageButton
                android:background="?attr/selectableItemBackgroundBorderless"
                android:id="@+id/copy_username_image_button"
                android:layout_height="32dp"
                android:layout_marginRight="@dimen/margin_medium"
                android:layout_width="32dp"
                android:src="@drawable/ic_clipboard"
                app:layout_constraintBottom_toBottomOf="@id/username_text_input_layout"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/username_text_input_layout"
                app:tint="@color/primary" />
        
            <com.google.android.material.textfield.TextInputLayout
                android:hint="@string/username_1"
                android:id="@+id/username_text_input_layout"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_width="0dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/copy_username_image_button"
                app:layout_constraintTop_toBottomOf="@id/url_text_input_layout">
            
                <com.google.android.material.textfield.TextInputEditText
                    android:editable="false"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:text="@{username}"
                    android:textIsSelectable="true" />
        
            </com.google.android.material.textfield.TextInputLayout>
    
            <ImageButton
                android:background="?attr/selectableItemBackgroundBorderless"
                android:id="@+id/copy_password_image_button"
                android:layout_height="32dp"
                android:layout_marginRight="@dimen/margin_medium"
                android:layout_width="32dp"
                android:src="@drawable/ic_clipboard"
                app:layout_constraintBottom_toBottomOf="@id/password_text_input_layout"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/password_text_input_layout"
                app:tint="@color/primary" />
        
            <com.google.android.material.textfield.TextInputLayout
                android:hint="@string/password_1"
                android:id="@+id/password_text_input_layout"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_width="0dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/copy_password_image_button"
                app:layout_constraintTop_toBottomOf="@id/username_text_input_layout">
            
                <com.google.android.material.textfield.TextInputEditText
                    android:editable="false"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:text="@{password}"
                    android:textIsSelectable="true" />
        
            </com.google.android.material.textfield.TextInputLayout>
        
            <com.google.android.material.textfield.TextInputLayout
                android:hint="@string/status_1"
                android:id="@+id/status_text_input_layout"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_width="match_parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/password_text_input_layout">
    
                <com.google.android.material.textfield.TextInputEditText
                    android:editable="false"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:text="@{status}"
                    android:textIsSelectable="true" />
        
            </com.google.android.material.textfield.TextInputLayout>
        
            <com.google.android.material.textfield.TextInputLayout
                android:hint="@string/notes_1"
                android:id="@+id/notes_text_input_layout"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_medium"
                android:layout_marginHorizontal="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_width="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/status_text_input_layout">
            
                <com.google.android.material.textfield.TextInputEditText
                    android:editable="false"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:maxLines="8"
                    android:text="@{notes}"
                    android:textIsSelectable="true" />
        
            </com.google.android.material.textfield.TextInputLayout>
    
        </androidx.constraintlayout.widget.ConstraintLayout>
        
    </ScrollView>
    
</layout>
